--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > #
 
 
 
-baseurl: ""# the subpath of your site, e.g. /blog/
+baseurl: "/thinknoack/"# the subpath of your site, e.g. /blog/
 
 url: http://localhost:4000 # the base hostname & protocol for your site
 
