adding changes to meta

--- a/thinknoack/_config.yml
+++ b/thinknoack/_config.yml
@@ -4,6 +4,9 @@ title: Thinknoack
 email: gregorynoack@thinknoack.com
 
 description: > #
+	My Name is Gregory Noack, I am a Frontend Developer, and this is my portfolio.
+
+contactdescription: > #
   I am constantly working to improve my skill set. 
   Taking classes, reading blogs, and doing what it takes to keep an edge. 
   The information out there is ever-growing and I can always learn more. 
