--- a/thinknoack/_config.yml
+++ b/thinknoack/_config.yml
@@ -4,17 +4,17 @@ title: Thinknoack
 email: gregorynoack@thinknoack.com
 
 description: > #
-  My Name is Gregory Noack, I am a Frontend Developer, and this is my portfolio.
+  My Name is Gregory Noack, I am a front-end developer, and this is my portfolio.
 
 contactdescription: > #
-  I am constantly working to improve my skill set. 
-  Taking classes, reading blogs, and doing what it takes to keep an edge. 
-  The information out there is ever-growing and I can always learn more. 
+  I am constantly working to improve my skill set.
+  Taking classes, reading blogs, and doing what it takes to keep an edge.
+  The information out there is ever-growing and I can always learn more.
   Keep checking back as I add new stuff and upgrade my current skills and knowledge of all things web.
 
 
 
-baseurl: ""# the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 
 url: http://localhost:4000 # the base hostname & protocol for your site
 
