--- a/thinknoack/_config.yml
+++ b/thinknoack/_config.yml
@@ -25,3 +25,14 @@ github_username:  thinknoack
 markdown: kramdown
 
 permalink: none
+
+
+compress_html:
+  clippings: []
+  comments: []
+  endings: []
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: []
