adding new images for compression

--- a/thinknoack/_config.yml
+++ b/thinknoack/_config.yml
@@ -28,8 +28,8 @@ permalink: none
 
 
 compress_html:
-  clippings: []
-  comments: []
+  clippings: all
+  comments: all
   endings: []
   ignore:
     envs: []
