fixing front-end typos

--- a/thinknoack/_config.yml
+++ b/thinknoack/_config.yml
@@ -4,7 +4,7 @@ title: Thinknoack
 email: gregorynoack@thinknoack.com
 
 description: > #
-  My Name is Gregory Noack, I am a front-end developer, and this is my portfolio.
+  My Name is Gregory Noack, I am a front end developer, and this is my portfolio.
 
 contactdescription: > #
   I am constantly working to improve my skill set.
