update to post content

--- a/_data/clients.yml
+++ b/_data/clients.yml
@@ -6,6 +6,10 @@
   industry: Private
 - name: HMH Agency
   industry: Private
+- name: Daimler
+  industry: Private
+- name: North Carolina Ports
+  industry: Private
 - name: Univox Media
   industry: Private
 - name: National Science Foundation
